# hz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  diff-syntax.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.codex/environments/: environment.toml
.github/: ai-review.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/actions/fetch-parser-bundle/: action.yml
.github/workflows/: ai-review.yml  pr-template.yml  quality.yml  release.yml
.greptile/: config.json  files.json  rules.md
.hz/: hz.toml
.hz/environment/: cleanup  setup
benchmarks/: README.md
crates/hz-bench/: Cargo.toml
crates/hz-cli/: Cargo.toml
crates/hz-cli/src/: args.rs  complete.rs  lifecycle.rs  main.rs  repo_shell.rs  tests.rs  update.rs  worktree_output.rs
crates/hz-cli/tests/: worktree_home.rs
crates/hz-command/: Cargo.toml
crates/hz-command/src/: config.rs  init.rs  lib.rs  lifecycle.rs  shell.rs  tests.rs  worktree.rs
crates/hz-command/src/shell/: hz.bash  hz.fish  hz.zsh
crates/hz-core/: Cargo.toml
crates/hz-core/src/: error.rs  lib.rs  path_utils.rs
crates/hz-diff/: Cargo.toml
crates/hz-git/src/: lib.rs
crates/hz-worktree/: Cargo.toml
crates/hz-worktree/src/: fork.rs  handoff.rs  lib.rs  list.rs  prune.rs  remove.rs  tests.rs
docs/: cli.md  config.md  roadmap.md
hz-agent/: Cargo.toml
hz-agent/src/: definition.rs  kind.rs  lib.rs  session.rs
hz-agent/src/providers/: claude.rs  codex.rs  mod.rs  pi.rs
hz-bench/: Cargo.toml
hz-bench/src/: main.rs
hz-cli/: Cargo.toml
hz-cli/src/: agent.rs  args.rs  complete.rs  daemon.rs  lifecycle.rs  main.rs  removal.rs  repo_shell.rs  tests.rs  tree_sitter.rs  update.rs  worktree_output.rs
hz-cli/tests/: diff_golden.rs  lifecycle.rs  worktree_home.rs
hz-command/: Cargo.toml
hz-command/src/: config.rs  diff.rs  init.rs  lib.rs  lifecycle.rs  shell.rs  syntax.rs  tests.rs  worktree.rs
hz-command/src/shell/: hz.bash  hz.fish  hz.zsh
hz-core/: Cargo.toml
hz-core/src/: error.rs
hz-daemon/: Cargo.toml
hz-daemon/src/: agent_process.rs  agent_store.rs  client.rs  lib.rs  paths.rs  process.rs  protocol.rs  server.rs  state.rs  unsupported.rs
hz-diff/: Cargo.toml
hz-diff/src/: lib.rs
hz-git/: Cargo.toml
hz-git/src/: lib.rs
hz-syntax/: Cargo.toml
hz-syntax/src/: highlight.rs  language.rs  lib.rs  paths.rs  storage.rs  tests.rs  types.rs
hz-tui/: Cargo.toml
hz-tui/src/: app.rs  controls.rs  editor.rs  event_reader.rs  lib.rs  live_diff.rs  main_app.rs  model.rs  render.rs  run.rs  runtime.rs  search.rs  syntax.rs  tests.rs  theme.rs
hz-tui/src/render/: diff.rs  grep.rs  headers.rs  menus.rs  mod.rs  sidebar.rs  statusline.rs  style.rs  text.rs
hz-worktree/: Cargo.toml
hz-worktree/src/: create.rs  fork.rs  handles.rs  handoff.rs  lib.rs  list.rs  pin.rs  prune.rs  registry.rs  remove.rs  target.rs  tests.rs  types.rs  worktree_include.rs
scripts/: dev-zsh  install.sh  render-homebrew-formula  smoke-curl-install  smoke-installer-update  smoke-mise  smoke-update  smoke-zsh  test-diff-error-pane
scripts/ci/: ai_pr_review.py
