[workspace]
members = [
    "hz-cli",
    "hz-command",
    "hz-core",
    "hz-diff",
    "hz-bench",
    "hz-git",
    "hz-syntax",
    "hz-tui",
    "hz-worktree",
]
resolver = "3"

[workspace.package]
version = "0.1.10"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Fast terminal workflow for parallel development with agents."
repository = "https://github.com/phongndo/hz"
keywords = ["ai", "agents", "cli", "terminal", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28.1"
fs2 = "0.4"
getrandom = "0.2.17"
notify = "8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
toml = "1.1"
tree-sitter-highlight = "0.26.9"
tree-sitter-language-pack = "1.9.0-rc.18"
# time 0.3.47 raises MSRV above the workspace Rust 1.85.
time = { version = "=0.3.45", default-features = false, features = ["local-offset", "std"] }
unicode-width = "0.2"

hz-core = { path = "hz-core" }
hz-command = { path = "hz-command" }
hz-diff = { path = "hz-diff" }
hz-git = { path = "hz-git" }
hz-syntax = { path = "hz-syntax" }
hz-tui = { path = "hz-tui" }
hz-worktree = { path = "hz-worktree" }
