[workspace]
members = [
    "hz-cli",
    "hz-bench",
    "hz-command",
    "hz-core",
    "hz-git",
    "hz-worktree",
]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Fast terminal workspace manager for parallel development with agents."
repository = "https://github.com/phongndo/hz"
keywords = ["ai", "agents", "cli", "terminal", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28.1"
fs2 = "0.4"
getrandom = "0.2.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "=0.3.45", default-features = false, features = ["local-offset", "std"] }
toml = "1.1"
unicode-width = "0.2"

hz-core = { path = "hz-core" }
hz-command = { path = "hz-command" }
hz-git = { path = "hz-git" }
hz-worktree = { path = "hz-worktree" }
