[package]
name = "hz-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "hz"
path = "src/main.rs"

[dependencies]
clap.workspace = true
crossterm.workspace = true
hz-command.workspace = true
hz-core.workspace = true
hz-tui.workspace = true
serde_json.workspace = true
time.workspace = true
unicode-width.workspace = true
