[package]
name = "hz-command"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
hz-core.workspace = true
hz-diff.workspace = true
hz-git.workspace = true
hz-worktree.workspace = true
serde.workspace = true
toml.workspace = true
