[package]
name = "hz-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
hz-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-language-pack.workspace = true
