[package]
name = "hz-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
crossterm.workspace = true
hz-core.workspace = true
hz-diff.workspace = true
ratatui.workspace = true
unicode-width.workspace = true
