[package]
name = "hz-worktree"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
fs2.workspace = true
getrandom.workspace = true
hz-core.workspace = true
hz-git.workspace = true
serde.workspace = true
serde_json.workspace = true
